    --no-migration-assistant, again (LP: #148766).
  * Update noninteractive frontend to use recent changes to
    FilteredCommand (LP: #149473).

  [ Colin Watson ]
  * Remove excessive blank lines in GDM and KDM configuration files in OEM
    mode.
  * GTK frontend:
    - Make sure the next button remains the default widget despite being
      hidden and re-shown.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 05 Oct 2007 11:40:54 -0400

ubiquity (1.6.2) gutsy; urgency=low

  [ Evan Dandrea ]
  * Add 'only-ubiquity' option to kernel cmdline to run ubiquity in a
    minimal session.  Thanks Tormod Volden (LP: #148341).
  * Filter out partition selections that do not have any users.

  [ Jonathan Riddell ]
  * KDE frontend:
   - Change ext3 to a less dangerous looking colour than red

  [ Colin Watson ]
  * Disable the intro message, as Ubuntu 7.10 is approaching.
  * Update translations from Rosetta.
  * Automatic update of included source packages: choose-mirror 2.15ubuntu2,
    debian-installer-utils 1.48ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 05 Oct 2007 13:23:00 +0100

ubiquity (1.6.1) gutsy; urgency=low

  [ Evan Dandrea ]
  * Modified the install component to allow grub preseeding in automatic mode.
  * Add missing subprocess import to base.py.
  * Respect preseeded values for grub-installer/with_other_os and
    grub-installer/only_debian.

  [ Colin Watson ]
  * Strip translation context for imported strings (e.g. "Navigation|_Back")
    at a lower level so that it applies to the KDE frontend too.
  * KDE frontend:
    - Remove some duplicate code during widget translation.
    - Retranslate oem_id_label when the language is changed.
  * Update imported translations from gtk+2.0 2.12.0-0ubuntu1.
  * Forbid consecutive, initial, or final dots in hostnames (LP: #105890).
  * Check whether gconftool-2 exists before calling it.
  * Add missing Provides to ubiquity-frontend-mythbuntu.